--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=g135-second-project
 
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=test2
-spring.jpa.hibernate.ddl-auto=update
+spring.db1.datasource.username=postgres
+spring.db1.datasource.password=postgres
+spring.db1.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/postgres?currentSchema=test2
+spring.db1.datasource.driver-class-name=org.postgresql.Driver
+
+spring.db2.datasource.username=postgres
+spring.db2.datasource.password=postgres
+spring.db2.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/g135?currentSchema=author
+spring.db2.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
-
+spring.jpa.hibernate.ddl-auto=create-drop
