--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,7 @@ spring.db2.datasource.password=postgres
 spring.db2.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/g135?currentSchema=author
 spring.db2.datasource.driver-class-name=org.postgresql.Driver
 
+spring.data.mongodb.uri=mongodb://localhost:27017/bitlab
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
